[gd_scene load_steps=5 format=3 uid="uid://d3dtli5g12s3e"]

[ext_resource type="Script" path="res://Scripts/pausemenu.gd" id="1_wq3gf"]
[ext_resource type="Texture2D" uid="uid://csjuuxdjxnk0r" path="res://Assets/Sprites/Grass.png" id="2_xqgnj"]
[ext_resource type="Theme" uid="uid://dj34p0jgvyynb" path="res://menu_theme.tres" id="3_2enea"]
[ext_resource type="PackedScene" uid="uid://dhrq6hvw5wo3a" path="res://Scenes/options.tscn" id="4_br3tb"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-163, 371)
script = ExtResource("1_wq3gf")

[node name="Background" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xqgnj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GameNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2enea")
text = "PAUSED"
horizontal_alignment = 1

[node name="Separator2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MenuContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MenuContainer"]
texture_filter = 1
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MenuContainer/MarginContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("3_2enea")

[node name="Main" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MenuContainer/MarginContainer/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer/MenuContainer/MarginContainer/PanelContainer/Main"]
layout_mode = 2
theme = ExtResource("3_2enea")
text = "RESUME"

[node name="Separator2" type="Control" parent="MarginContainer/VBoxContainer/MenuContainer/MarginContainer/PanelContainer/Main"]
layout_mode = 2

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/MenuContainer/MarginContainer/PanelContainer/Main"]
custom_minimum_size = Vector2(240, 100)
layout_mode = 2
theme = ExtResource("3_2enea")
text = "OPTIONS"

[node name="OptionsContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MenuContainer/MarginContainer/PanelContainer/Main"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(200, 250)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Options" parent="MarginContainer/VBoxContainer/MenuContainer/MarginContainer/PanelContainer/Main/OptionsContainer" instance=ExtResource("4_br3tb")]
layout_mode = 2
size_flags_vertical = 3

[node name="Separator3" type="Control" parent="MarginContainer/VBoxContainer/MenuContainer/MarginContainer/PanelContainer/Main"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/MenuContainer/MarginContainer/PanelContainer/Main"]
custom_minimum_size = Vector2(240, 100)
layout_mode = 2
theme = ExtResource("3_2enea")
text = "QUIT GAME"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuContainer/MarginContainer/PanelContainer/Main/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuContainer/MarginContainer/PanelContainer/Main/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuContainer/MarginContainer/PanelContainer/Main/QuitButton" to="." method="_on_quit_button_pressed"]
